[gd_scene format=3 uid="uid://dqdmxkfyyqrnr"]

[ext_resource type="PackedScene" uid="uid://upnbb2ag6ca3" path="res://interface/modals/modal_base.tscn" id="1_bvwib"]
[ext_resource type="Script" uid="uid://oj81wpq4wiv1" path="res://interface/modals/server_host_modal.gd" id="2_tj2j0"]
[ext_resource type="FontFile" uid="uid://6jwanjejq26x" path="res://resources/fonts/fira_code/FiraCode-SemiBold.ttf" id="3_4v5j0"]
[ext_resource type="Texture2D" uid="uid://cml4bx5ybxqtj" path="res://icons/settings.png" id="3_qh577"]
[ext_resource type="Texture2D" uid="uid://ce363inc867qy" path="res://icons/group.png" id="4_aadew"]
[ext_resource type="Texture2D" uid="uid://qdrusckdd544" path="res://icons/playArrow.png" id="4_baafq"]
[ext_resource type="Texture2D" uid="uid://b0pdivrbq5lhv" path="res://icons/cancel.png" id="5_baafq"]
[ext_resource type="Texture2D" uid="uid://cx82iqpj61hn0" path="res://icons/readMore.png" id="6_aadew"]

[sub_resource type="InputEventKey" id="InputEventKey_ncowb"]
device = -1
ctrl_pressed = true
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_l6lgs"]
events = [SubResource("InputEventKey_ncowb")]

[node name="ServerHostModal" unique_id=649999717 instance=ExtResource("1_bvwib")]
script = ExtResource("2_tj2j0")

[node name="Background" parent="." index="0" unique_id=1888075823]
offset_left = 19.000242
offset_top = 6.0002437
offset_right = 19.000244
offset_bottom = 6.000244

[node name="Modal" parent="." index="1" unique_id=18995346]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="HSplitContainer" type="HSplitContainer" parent="Modal/MarginContainer" parent_id_path=PackedInt32Array(1793144273) index="0" unique_id=1473195332]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Modal/MarginContainer/HSplitContainer" index="0" unique_id=841542730]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2" index="0" unique_id=757823207]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tab_0/icon = ExtResource("3_qh577")
tab_1/icon = ExtResource("4_aadew")

[node name="Config" type="TextEdit" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2/TabContainer" index="1" unique_id=1911478325]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4v5j0")
placeholder_text = "No config found."
wrap_mode = 1
scroll_smooth = true
minimap_draw = true
caret_blink = true
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
draw_spaces = true
metadata/_tab_index = 0

[node name="SaveConfig" type="Button" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2/TabContainer/Config" index="5" unique_id=45120366]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -45.0
offset_right = 105.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_type_variation = &"Button_Important"
shortcut = SubResource("Shortcut_l6lgs")
text = "Save Config (Ctrl+S)"
icon = ExtResource("6_aadew")

[node name="Peers" type="VBoxContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2/TabContainer" index="2" unique_id=374203102]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2" index="1" unique_id=334439048]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer" index="0" unique_id=1629694210]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"Button_Important"
text = "Start Server"
icon = ExtResource("4_baafq")

[node name="StopButton" type="Button" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer" index="1" unique_id=858563385]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"Button_Red"
text = "Stop Server"
icon = ExtResource("5_baafq")

[node name="VBoxContainer" type="VBoxContainer" parent="Modal/MarginContainer/HSplitContainer" index="1" unique_id=1000452049]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer" index="0" unique_id=76562762]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer/PanelContainer2" index="0" unique_id=1464460345]
layout_mode = 2

[node name="LogScroller" type="ScrollContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer/PanelContainer2/MarginContainer" index="0" unique_id=752342646]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="LogItems" type="VBoxContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer/PanelContainer2/MarginContainer/LogScroller" index="0" unique_id=490637045]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer" index="1" unique_id=1350458517]
layout_mode = 2

[node name="Label" type="Label" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2" index="0" unique_id=888737092]
layout_mode = 2
text = "Command: "

[node name="ConsoleLine" type="LineEdit" parent="Modal/MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2" index="1" unique_id=349107496]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type \"help\" for list of commands."

[connection signal="pressed" from="Modal/MarginContainer/HSplitContainer/VBoxContainer2/TabContainer/Config/SaveConfig" to="." method="_on_save_config_pressed"]
[connection signal="pressed" from="Modal/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer/StartButton" to="." method="_on_start_server_button_pressed"]
[connection signal="pressed" from="Modal/MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer/StopButton" to="." method="_on_stop_server_button_pressed"]
[connection signal="text_submitted" from="Modal/MarginContainer/HSplitContainer/VBoxContainer/HBoxContainer2/ConsoleLine" to="." method="_on_console_line_text_submitted"]
